force-app/main/default/objects/ECOA_Study_Schedule__c/ECOA_Study_Schedule__c.object-meta.xml
<CustomObject>
    <label>ECOA Study Schedule</label>
    <nameField>
        <displayFormat>EC-{00000}</displayFormat>
        <label>ECOA Study Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ECOA Study Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>