force-app/main/default/objects/ECOA_Study_Schedule__c/fields/Clinical_Trial_Profile__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical Trial Profile</label>
    <referenceTo>Clinical_Trial_Profile__c</referenceTo>
    <relationshipLabel>ECOA Study Schedules</relationshipLabel>
    <relationshipName>ECOA_Study_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>