force-app/main/default/objects/ECOA_Study_Schedule__c/fields/ClinroRuleSetGuid__c.field-meta.xml
<CustomField>
    <fullName>ClinroRuleSetGuid__c</fullName>
    <label>ClinroRuleSetGuid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>