force-app/main/default/objects/ECOA_Study_Schedule__c/fields/EproRuleSetGuid__c.field-meta.xml
<CustomField>
    <fullName>EproRuleSetGuid__c</fullName>
    <label>EproRuleSetGuid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>