force-app/main/default/objects/ECOA_Study_Schedule__c/fields/Visit_Plan__c.field-meta.xml
<CustomField>
    <fullName>Visit_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Plan</label>
    <referenceTo>Visit_Plan__c</referenceTo>
    <relationshipLabel>ECOA Study Schedules</relationshipLabel>
    <relationshipName>ECOA_Study_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>